refactor: Improve access control logic and error handling for forbidden operations, including frontend action button display and backend exception messages.